# Tek1

./: README.md
Bootstraps/BSQ_bootstrap/: BSQ  Makefile
Bootstraps/Corewar/: CMakeLists.txt  Makefile  matchstick  one-structure.yolo  several-variables.yolo  some-text.yolo
Bootstraps/Corewar/include/: Maxime la pute.h  my.h
Bootstraps/Corewar/lib/my/: my_atoi.c
Bootstraps/Corewar/src/: main.c
Bootstraps/Minishell1/: CMakeLists.txt  Makefile  bsq  test
Bootstraps/Minishell1/include/: my_bool.h
Bootstraps/Minishell1/src/: main.c
Bootstraps/Réseau/: Sans nom 1.ods
Bootstraps/bootstrap_epytodo/: run.py
Bootstraps/my_cook/: CMakeLists.txt  Makefile  my_cook
Bootstraps/my_hunter_bootstrap/: Makefile  program  simple_window.c
Bootstraps/my_ls/: main.c
Bootstraps/navy/: kill_it  main.c  process_info  who_sig_me
CPE/CPE_BSQ_2017/: CMakeLists.txt  Makefile  bsq
CPE/CPE_BSQ_2017/include/: bsq.h  my.h
CPE/CPE_BSQ_2017/lib/my/: Makefile
CPE/CPE_BSQ_2017/src/: algo.c  main.c  parser.c
CPE/CPE_corewar_2017/: CMakeLists.txt  Makefile
CPE/CPE_corewar_2017/asm/: Makefile  asm  zork.s
CPE/CPE_corewar_2017/asm/include/: my.h  op.h  project.h
CPE/CPE_corewar_2017/asm/lib/my/: my_put_nbr.c  my_putchar.c  my_strcat.c  my_strdup.c  my_strncat.c  my_strncmp.c  my_strncpy.c
CPE/CPE_corewar_2017/asm/src/: get_name_comment.c  init_cor.c  main.c
CPE/CPE_corewar_2017/champions/: Makefile
CPE/CPE_corewar_2017/champions/include/: get_next_line.h
CPE/CPE_corewar_2017/champions/lib/my/: Makefile  my_parser.c
CPE/CPE_corewar_2017/vm/: Makefile
CPE/CPE_duostumper_0_2017/: Makefile  my_ginger
CPE/CPE_duostumper_1_2017/: CMakeLists.txt  Makefile  fractals
CPE/CPE_duostumper_2_2017/: CMakeLists.txt  Makefile  connect4
CPE/CPE_duostumper_3_2017/: CMakeLists.txt  Makefile  minicut
CPE/CPE_duostumper_4_2017/: CMakeLists.txt  Makefile  mydb  test
CPE/CPE_duostumper_5_2017/: CMakeLists.txt  Makefile  text_count
CPE/CPE_duostumper_6_2017/: CMakeLists.txt  Makefile  sandpile  test
CPE/CPE_duostumper_7_2017/: CMakeLists.txt  Makefile  hangman  test
CPE/CPE_getnextline_2017/: CMakeLists.txt  Makefile  get_next_line  get_next_line.c  main.c
CPE/CPE_lemin_2017/: CMakeLists.txt  Makefile  lem_in  test  test2
CPE/CPE_matchstick_2017/: CMakeLists.txt  Makefile  matchstick  script.sh
CPE/CPE_matchstick_2017/include/: matchstick.h  my.h
CPE/CPE_matchstick_2017/src/: ai.c  drawer.c  error.c  error2.c  goal.c  main.c
CPE/CPE_n4s_2017/: CMakeLists.txt  Makefile  ai
CPE/CPE_pushswap_2017/: Makefile  push_swap
CPE/CPE_solostumper_2_2017/: CMakeLists.txt  Makefile  rrostring
CPE/CPE_solostumper_3_2017/: CMakeLists.txt  Makefile  fuzzbozz
E-Graph/: .buildconfig  welcome.php
E-Graph/my_cook_2017/: CMakeLists.txt  Makefile  my_cook
E-Graph/my_hunter/: Makefile  program  simple_window.c
E-Graph/my_hunter_2017/: CMakeLists.txt  Makefile  my_hunter  program
E-Graph/my_rpg_2017/: CMakeLists.txt  Makefile  a  my_rpg
E-Graph/rpg_maps/: map1.tmx  template.tmx
Maths/101pong_2017/: Makefile
Maths/102architect_2017/: 102architect  Makefile
Maths/103cipher_2017/: 103cipher  CMakeLists.txt  Makefile
Maths/104intersection_2017/: 104intersection  CMakeLists.txt  Makefile  q
Maths/104intersection_2017/include/: my.h
Maths/104intersection_2017/lib/my/: Makefile  my_printf.c
Maths/104intersection_2017/src/: calc.c  error.c  main.c  my_forms.c
Maths/105torus_2017/: 105torus  CMakeLists.txt  Makefile
Maths/106bombyx_2017/: .buildconfig  106bombyx  CMakeLists.txt  Makefile  drawer.gnu
Maths/107transfer_2017/: 107transfer  CMakeLists.txt  Makefile
Maths/107transfer_2017/bonus/: bonus
Maths/107transfer_2017/lib/my/: Makefile
Maths/107transfer_2017/src/: calc.c
Maths/108trigo_2017/: 108trigo  Makefile
Maths/109titration_2017/: 109titration  CMakeLists.txt  Makefile
Maths/110borwein_2017/: 110borwein
Maths/Python/: 013_largeSum  018_maximumPathSum1  022_namesScores  042_codedTriangleNumbers  067_maximumPathSum2  099_largestExponential
PSU/PSU_minishell2_2017/: CMakeLists.txt  Makefile  mysh  test.c
PSU/PSU_my_ls_2017/: Makefile  my_ls
PSU/PSU_my_printf_2017/: Makefile
PSU/PSU_my_printf_bootstrap_2017/: Makefile  disp_stdarg.c  main.c
PSU/PSU_my_sokoban_2017/: Makefile  my_sokoban
PSU/PSU_navy_2017/: CMakeLists.txt  Makefile  navy
PSU/PSU_tetris_2017/: CMakeLists.txt  Makefile  note  tetris
Piscine/CPool_Day01_2017/: mr_clean  prepare_my_repo.sh  push_that.sh
Piscine/CPool_Day02_2017/: count_files.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  r_tacpy.sh  skip.sh
Piscine/CPool_Day03_2017/: my_isneg.c  my_print_alpha.c  my_print_comb.c  my_print_comb2.c  my_print_digits.c  my_print_revalpha.c
Piscine/CPool_Day04_2017/: my_evil_str.c  my_putstr.c  my_putstr_boosted.c
Piscine/CPool_Day05_2017/: .my_compute_square_root.c  my_compute_factorial_it.c  my_compute_factorial_rec.c  my_compute_power_it.c  my_compute_power_rec.c
Piscine/CPool_Day06_2017/: my_revstr.c  my_strncpy.c  my_strstr.c
Piscine/CPool_Day07_2017/: my_strcat.c  my_strncat.c
(+587 files in other folders)
